FIX: Block Alignments
All image and link blocks are aligned to edges

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -16,15 +16,17 @@ footer {
 
       .footer-block.img-block {
         width:30%;
-        padding:0;
+        padding-top: 70px;
+        padding-left:0;
+        height:170px;
         border-right:1px solid $footer-link-color;
        // margin-left:-50px;
       }
 
       .footer-block {
         padding:20px;
-
-        width:16%;
+        //border:1px solid red;
+        width:20%;
 
         .block-title {
           color:#fff;
@@ -44,6 +46,10 @@ footer {
           a { color:$footer-link-color; font-size:14px; }
         }
 
+        &:last-child {
+          padding-right: 0;
+          margin-right: -60px;
+        }
 
       }
 
